Added day rating: every day you will receive notification where you can select how was your day, some bug fixes and refactoring, removed unused buttons in navigation drawer.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,13 +26,16 @@
             android:name=".Controller.Services.DoPlanNotificationSenderService"
             android:enabled="true" />
         <service
-            android:name=".Controller.Services.plansUpdaterService"
+            android:name=".Controller.Services.PlansUpdaterService"
             android:enabled="true" />
         <service
             android:name=".Controller.Services.UndonePlansNotificationSenderService"
             android:enabled="true" />
         <service
             android:name=".Controller.Services.OpenPlansViewService"
+            android:enabled="true" />
+        <service
+            android:name=".Controller.Services.DayRateService"
             android:enabled="true" />
 
         <activity android:name=".View.View.Activities.FirstSetUpActivity" />
